@@ -7,6 +7,7 @@
 * Paymill: Send new required fields on tokenization requests [tschelabaumann] #2279
 * GlobalCollect: Pass options to Refund [curiousepic] #2330
 * PayU LATAM: Let Refund take amount value [curiousepic] #2334
+* Linkpoint: Raise ArgumentError when trying to instantiate without `:pem` [jasonwebster] #2329
 
 == Version 1.63.0 (February 2, 2017)
 * Authorize.net: Add #unstore support [jimryan] #2293
